istio-ambient/resources/helloworld-v3.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v3
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: helloworld
    version: v3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v3-cross-node
  labels:
    app: helloworld
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v3
  template:
    metadata:
      labels:
        app: helloworld
        version: v3
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: version
                    operator: In
                    values:
                      - v2
              topologyKey: kubernetes.io/hostname
      serviceAccountName: helloworld3              
      containers:
      - name: helloworld
        image: docker.io/istio/examples-helloworld-v1
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
