istio-ambient/resources/waypoint.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: gateway-helloworld
  annotations:
    istio.io/service-account: helloworld
spec:
  gatewayClassName: istio-mesh
