istio-ambient/resources/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "helloworld"
  http:
  - match:
    - uri:
        exact: /hello
    fault:
      delay:
        percentage:
          value: 100.0
        fixedDelay: 5s        
    route:
    - destination:
        host: helloworld
        port:
          number: 5000
